<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchAndDeleteContact"
    android:background="@color/backgroundColor">

    <EditText
        android:id="@+id/SearchEditTextId"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="45dp"
        android:autofillHints="@string/contact_name"
        android:hint="@string/search_name"
        android:inputType="text">
    </EditText>

    <Button
        android:id="@+id/SearchButtonId"
        android:text="@string/search"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_toEndOf="@+id/SearchEditTextId"
        android:layout_toRightOf="@+id/SearchEditTextId"
        android:background="@color/buttonColor"
        android:onClick="searchContactInfo">
    </Button>

    <TextView
        android:id="@+id/SearchEmailAddressId"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:text="@string/email_here"
        android:textAppearance="@style/TextAppearance.AppCompat.Large">
    </TextView>

    <TextView
        android:id="@+id/SearchNumberId"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SearchEditTextId"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="162dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:text="@string/number_here"
        android:textAppearance="@style/TextAppearance.AppCompat.Large">
    </TextView>

    <Button
        android:id="@+id/DeleteContactId"
        android:layout_width="165dp"
        android:layout_height="57dp"
        android:layout_below="@+id/SearchEmailAddressId"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="116dp"
        android:layout_marginLeft="116dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="129dp"
        android:layout_marginRight="129dp"
        android:background="@color/buttonColor"
        android:onClick="deleteInfo"
        android:text="@string/delete_contact" />

</RelativeLayout>