<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="@color/backgroundColor">

    <TextView
        android:id="@+id/UserNameId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp">
    </TextView>

    <TextView
        android:id="@+id/UserEmailId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp">
    </TextView>

    <TextView
        android:id="@+id/UserNumberId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile_number"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp">
    </TextView>

</LinearLayout>