<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <EditText
        android:id="@+id/SearchEditTextId"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="45dp"
        android:autofillHints="@string/contact_name"
        android:hint="@string/search_name"
        android:inputType="text">
    </EditText>

    <TextView
        android:id="@+id/UpdateTextId"
        android:layout_width="268dp"
        android:layout_height="65dp"
        android:layout_below="@+id/SearchButtonId"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="61dp"
        android:layout_marginLeft="61dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="81dp"
        android:layout_marginRight="81dp"
        android:text="@string/update_contact"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:gravity="center">
    </TextView>

    <Button
        android:id="@+id/SearchButtonId"
        android:text="@string/search"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_toEndOf="@+id/SearchEditTextId"
        android:layout_toRightOf="@+id/SearchEditTextId"
        android:background="@color/buttonColor"
        android:onClick="searchContactInfo">
    </Button>

    <EditText
        android:inputType="text"
        android:autofillHints="@string/name_here"
        android:id="@+id/SearchNameAddressId"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:hint="@string/name_here"
        android:textAppearance="@style/TextAppearance.AppCompat.Large">
    </EditText>

    <EditText
        android:autofillHints="@string/email_here"
        android:inputType="textEmailAddress"
        android:id="@+id/SearchEmailAddressId"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="33dp"
        android:hint="@string/email_here"
        android:textAppearance="@style/TextAppearance.AppCompat.Large">
    </EditText>

    <EditText
        android:inputType="number"
        android:autofillHints="@string/mobile_number"
        android:id="@+id/SearchNumberId"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SearchEditTextId"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="205dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="35dp"
        android:hint="@string/number_here"
        android:textAppearance="@style/TextAppearance.AppCompat.Large">
    </EditText>

    <Button
        android:id="@+id/UpdateSearchedContactId"
        android:layout_width="165dp"
        android:layout_height="57dp"
        android:layout_below="@+id/SearchEmailAddressId"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="116dp"
        android:layout_marginLeft="116dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="129dp"
        android:layout_marginRight="129dp"
        android:background="@color/buttonColor"
        android:text="@string/update_contact"
        android:onClick="updateContact"/>


</RelativeLayout>