<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInfo"
    android:background="@color/backgroundColor">

    <TextView
        android:id="@+id/NewUserInfoId"
        android:layout_width="225dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/add_newUser_information"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:gravity="center"/>

    <EditText
        android:autofillHints="ContactName"
        android:hint="@string/contact_name"
        android:id="@+id/ContactNameId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NewUserInfoId" />

    <EditText
        android:id="@+id/MobileNumberId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:autofillHints="Mobile Number"
        android:ems="10"
        android:hint="@string/mobile_number"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NewUserInfoId"
        app:layout_constraintVertical_bias="0.013" />

    <EditText
        android:autofillHints="EmailAddress"
        android:id="@+id/EmailAddressId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NewUserInfoId" />

    <Button
        android:id="@+id/saveInfoId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:background="@color/buttonColor"
        android:onClick="newUserInfo"
        android:text="@string/save_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MobileNumberId" />


</androidx.constraintlayout.widget.ConstraintLayout>